# lavoro-apk

./: README_APK.md  core_lavoro.py  main.py  push_ntfy.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  notifica.yml
