[project]
name = "rassegna-lavoro"
version = "1.0.0"
description = "Rassegna normativa del lavoro"
requires-python = ">=3.9"
# NB: 'flet' NON va elencato qui (lo fornisce il build). Solo le librerie extra.
dependencies = ["requests", "beautifulsoup4"]

[tool.flet]
org = "it.consulentedellavoro"
product = "Rassegna Lavoro"
company = "Studio"
