[project]
name = "rassegna-lavoro"
version = "1.0.0"
description = "Rassegna normativa del lavoro"
requires-python = ">=3.9"
# 'flet' DEVE esserci (l'app fa "import flet" a runtime).
# 'feedparser' resta FUORI: era lui a causare il conflitto di dipendenze.
dependencies = ["flet", "requests", "beautifulsoup4"]

[tool.flet]
org = "it.consulentedellavoro"
product = "Rassegna Lavoro"
company = "Studio"
